<resources>
    <string name="app_name">myWeather</string>
    <string name="weather_forecast">Weather forecast</string>
    <string name="current">Current</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
    <string name="alert">Alert</string>
    <string name="london_center">London/center</string>
    <string name="at_7_30_pm">At 7:30 pm</string>
    <string name="_25">25</string>
    <string name="clear_weather">clear weather</string>
    <string name="o">o</string>
    <string name="lastUpdated">Last updated</string>
    <string name="precipitation">Precipitation</string>
    <string name="wind">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="_20">20%</string>
    <string name="speed_wind">12 Km</string>
    <string name="number">1234</string>
    <string name="visibility">Visibility</string>
    <string name="humidity">Humidity</string>
    <string name="humidityValue">0.42</string>
    <string name="cloud_cover">Cloud Cover</string>
    <string name="temperature">Temperature</string>
    <string name="please_try_later">Please try later</string>
    <string name="no_internet_connection_message">It seems you do not have an internet connection , please try to connect to the internet before checking the weather.</string>
    <string name="no_internet_connection">No Internet Connection</string>
</resources>
